tests/errors/syn_while3.java
public class syn_while3 {
public static void main(String[] args){
while ( ) {
 
}
}
}